MockBukkit works